--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </div>
     <div class="draggableIcon icon">
       <a href="css/index.html" target="_blank">
-        <img src="assets/img/icon-css3.png" alt="CSS">
+        <img src="assets/img/icon-css.png" alt="CSS">
         <span>CSS</span>
       </a>
     </div>
