--- a/webd/site/siteC/index.html
+++ b/webd/site/siteC/index.html
@@ -3,7 +3,6 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vallery Festival</title>
 
@@ -26,19 +25,19 @@
           <li><a href="#">축제소개</a>
             <ul class="submenu">
               <li><a href="#">Festival 소개</a></li>
-              <li><a href="#">행사장 안내</a></li>
+              <li><a href="#">행사장안내</a></li>
               <li><a href="#">조직위원회</a></li>
             </ul>
           </li>
           <li><a href="#">예약안내</a>
-            <ul class="submenu">
+            <ul>
               <li><a href="#">예약하기</a></li>
               <li><a href="#">예약확인/취소</a></li>
               <li><a href="#">단체예약문의</a></li>
             </ul>
           </li>
           <li><a href="#">아티스트</a>
-            <ul class="submenu">
+            <ul>
               <li><a href="#">고릴라즈</a></li>
               <li><a href="#">메이저 레이저</a></li>
               <li><a href="#">아우스게인</a></li>
@@ -46,36 +45,32 @@
             </ul>
           </li>
           <li><a href="#">커뮤니티</a>
-            <ul class="submenu">
+            <ul>
               <li><a href="#">공지사항</a></li>
-              <li><a href="#">사진 갤러리</a></li>
-              <li><a href="#">영상 갤러리</a></li>
+              <li><a href="#">사진갤러리</a></li>
+              <li><a href="#">영상갤러리</a></li>
             </ul>
           </li>
         </ul>
       </nav>
     </aside>
-    <!-- //asdie -->
+    <!-- //aside -->
 
     <main id="main">
       <article id="slider">
         <div class="sliderWrap">
-          <div class="slider s1">
-            <a href="#"><img src="images/slider01.jpg" alt="Vallery Festival1"></a>
+          <div class="slider">
+            <a href="#"><img src="images/sliderC01.jpg" alt="Vallery Festival"></a>
             <div class="text">
               <h2>Vallery <em>Festival</em></h2>
               <p>신나는 축제 같이 놀아봅시다.</p>
             </div>
-          </div>
-          <div class="slider s2">
-            <a href="#"><img src="images/slider02.jpg" alt="Vallery Festival2"></a>
+            <a href="#"><img src="images/sliderC02.jpg" alt="Vallery Festival"></a>
             <div class="text">
               <h2>Vallery <em>Festival</em></h2>
               <p>신나는 축제 같이 놀아봅시다.</p>
             </div>
-          </div>
-          <div class="slider s3">
-            <a href="#"><img src="images/slider03.jpg" alt="Vallery Festival3"></a>
+            <a href="#"><img src="images/sliderC03.jpg" alt="Vallery Festival"></a>
             <div class="text">
               <h2>Vallery <em>Festival</em></h2>
               <p>신나는 축제 같이 놀아봅시다.</p>
@@ -86,32 +81,32 @@
       <!-- //slider -->
 
       <div id="contents">
-        <article class="notice">
+        <section class="notice">
           <h3>Vallery Festival 공지사항</h3>
           <ul>
-            <li><a href="#">주차장 안내 및 테켓 수령 장소 주차장 안내 및 테켓 수령 장소</a></li>
+            <li><a href="#">주차장 안내 및 티켓 수령 장소</a></li>
             <li><a href="#">Vallery Festival 날짜 및 장소 안내</a></li>
-            <li><a href="#">아티스트 라인 업 및 티켓팅 하는 방법</a></li>
+            <li><a href="#">아티스트 라인업 및 티켓팅 하는 방법</a></li>
             <li><a href="#">주의사항 및 안내사항 참고 필수</a></li>
             <li><a href="#">Vallery Festival 사이트 업데이트 안내</a></li>
           </ul>
-        </article>
+        </section>
         <!-- //notice -->
 
-        <article class="gallery">
+        <section class="gallery">
           <h3>Vallery Festival 갤러리</h3>
           <ul>
-            <li><a href="#"><img src="images/gallery01.jpg" alt="현장사진1"></a></li>
-            <li><a href="#"><img src="images/gallery02.jpg" alt="현장사진2"></a></li>
-            <li><a href="#"><img src="images/gallery03.jpg" alt="현장사진3"></a></li>
+            <li><a href="#"><img src="images/galleryC01.jpg" alt="현장사진1"></a></li>
+            <li><a href="#"><img src="images/galleryC02.jpg" alt="현장사진2"></a></li>
+            <li><a href="#"><img src="images/galleryC03.jpg" alt="현장사진3"></a></li>
           </ul>
-        </article>
+        </section>
         <!-- //gallery -->
 
-        <article class="link">
+        <section class="link">
           <h3>Vallery Festival</h3>
-          <a href="#" class="popup-btn">티켓 구매</a>
-        </article>
+          <a href="#" class="popup_btn">티켓구매</a>
+        </section>
         <!-- //link -->
       </div>
       <!-- //contents -->
@@ -121,8 +116,8 @@
           <h4>Vallery Festival</h4>
         </div>
         <div class="footer2">
-          주소 서울시 강남구 삼성로 100 삼성동빌딩 100층<br>
-          COPYRIGHT(C) ALL RIGHTS RESERVED.
+          주소 서울시 강남구 삼성로 100 삼성동빌딩 100층<br />
+          COPYRIGHT(C) All Rights Reserved.
         </div>
         <div class="footer3">
           <select name="select" id="select">
@@ -137,17 +132,21 @@
     </main>
     <!-- //main -->
 
-    <article class="popup-view">
-      <h3>Vallery Festival</h3>
+    <article class="popup_view">
+      <h3></h3>
       <p>
         안녕하세요, Vallery Festival 운영팀입니다.
-        2023년 Vallery Festival 티켓 예매 일정에 변경이 있어 안내드립니다.
-        기존 예매 일정에 따르면 6월 1일부터 6월 30일까지 티켓 예매가 가능하였으나,
-        운영상의 문제로 인해 일정이 변경되었습니다.
+        Vallery Festival 티켓 예매일정이 변경됨을 알려드립니다. 기존에는 6월 1일부터 6월 30일까지 예매가 가능했지만, 새로운 일정은 추후에 다시 공지될 예정입니다. 이전에 예매를 계획하셨던
+        분들께는 추가 안내를 기다려주시면
+        감사하겠습니다. 문의사항이 있으시면 언제든지 연락 주세요.
+
+        감사합니다.
+
+        Vallery Festival 운영팀 드림.
       </p>
-      <a href="#" class="popup-close">닫기</a>
+      <a href="#" class="popup_close">닫기</a>
     </article>
-    <!-- //popup  -->
+    <!-- //popup -->
   </div>
 </body>
 
