--- a/webd/site/siteD/index.html
+++ b/webd/site/siteD/index.html
@@ -4,35 +4,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>웹디자인기능사 D-2</title>
+    <title>서울구석구석</title>
+
+    <!-- css -->
     <link rel="stylesheet" href="css/style.css">
+    <!-- script  -->
+    <script src="script/jquery.min.js"></script>
+    <script src="script/script.js"></script>
 </head>
 
 <body>
     <div id="wrap">
-        <header id="header">
+        <aside id="aside">
             <h1 class="logo">
-                <a href="#">서울 구석구석</a>
+                <a href="#">서울구석구석</a>
             </h1>
             <nav class="nav">
                 <ul>
                     <li><a href="#">지금의 서울</a>
-                        <ul>
+                        <ul class="submenu">
                             <li><a href="#">이벤트</a></li>
                             <li><a href="#">축제&행사</a></li>
                             <li><a href="#">전시</a></li>
                         </ul>
                     </li>
                     <li><a href="#">추천</a>
-                        <ul>
-                            <li><a href="#">에디터 추천</a></li>
+                        <ul class="submenu">
+                            <li><a href="#">에디터추천</a></li>
                             <li><a href="#">테마코스</a></li>
                             <li><a href="#">도보해설관광</a></li>
                             <li><a href="#">한류관광</a></li>
                         </ul>
                     </li>
                     <li><a href="#">여행지</a>
-                        <ul>
+                        <ul class="submenu">
                             <li><a href="#">명소</a></li>
                             <li><a href="#">엔터테인먼트</a></li>
                             <li><a href="#">음식</a></li>
@@ -40,7 +45,7 @@
                         </ul>
                     </li>
                     <li><a href="#">여행정보</a>
-                        <ul>
+                        <ul class="submenu">
                             <li><a href="#">가이드북&지도</a></li>
                             <li><a href="#">시티투어버스</a></li>
                             <li><a href="#">날씨</a></li>
@@ -48,158 +53,115 @@
                     </li>
                 </ul>
             </nav>
-        </header>
-        <!-- //header -->
+        </aside>
+        <!-- //aside -->
 
         <main id="main">
-            <section class="cont1">
-                <div class="sliders">
-                    <div class="slider-wrap">
-                        <div class="slider s1">
-                            <h2>서울 벛꽃 축제 개최안내</h2>
-                            <p>2024년 벛꽃 축제를 개최합니다.</p>
-                        </div>
-                        <div class="slider s2">
-                            <h2>서울 역사박물관 리모델링 공사안내</h2>
-                            <p>서울 역사박물관 리모델링 공사를 진행합니다.</p>
-                        </div>
-                        <div class="slider s3">
-                            <h2>서울 현대미술관 특별 전시회 개최안내</h2>
-                            <p>서울 현대미술관 특별 전시회를 개최합니다.</p>
+            <div id="slider">
+                <article class="imageWrap">
+                    <div class="image i1">
+                        <div class="text">
+                            <h2>할인 가득! 설렘 가득</h2>
+                            <p>대한민국 숙박세일 페스타 5월 30일(화), 놀이공원 할인대전 5월 31일(수)부터 실시</p>
                         </div>
                     </div>
-                </div>
-                <div class="banner">
-                    <div>
-                        <h3>서울 특별 전시관</h3>
-                        <p>행사에 초대합니다.</p>
-                        <a href="#">클릭하기</a>
+                    <div class="image i2">
+                        <div class="text">
+                            <h2>할인 가득! 설렘 가득</h2>
+                            <p>대한민국 숙박세일 페스타 5월 30일(화), 놀이공원 할인대전 5월 31일(수)부터 실시</p>
+                        </div>
                     </div>
-                </div>
-            </section>
-            <section class="cont2">
-                <div class="notice">
+                    <div class="image i3">
+                        <div class="text">
+                            <h2>할인 가득! 설렘 가득</h2>
+                            <p>대한민국 숙박세일 페스타 5월 30일(화), 놀이공원 할인대전 5월 31일(수)부터 실시</p>
+                        </div>
+                    </div>
+                </article>
+                <!-- imageWrap -->
+
+                <article class="banner">
+                    <h3>6월은 <em>여행가는 달</em></h3>
+                    <a href="#">알아보기</a>
+                </article>
+                <!-- //banner -->
+            </div>
+            <!-- //slider -->
+            <div id="contents">
+                <section class="notice">
                     <h3>공지사항</h3>
                     <ul>
-                        <li><a href="#">서울 벛꽃 축제 개최안내</a><span>2024.04.01</span></li>
-                        <li><a href="#">서울 역사박물관 리모델링 공사안내</a><span>2024.04.20</span></li>
-                        <li><a href="#">서울 지하철 2호선 운행시간 변경안내</a><span>2024.06.20</span></li>
-                        <li><a href="#">서울 현대미술관 특별 전시회 개최안내</a><span>2024.08.09</span></li>
-                        <li><a href="#">서울 박물관 특별 전시회 개최안내</a><span>2024.10.24</span></li>
+                        <li class="popup-btn"><a href="#">2024 관광산업 디지털혁신 오픈세미나 개최 관광산업 디지털혁신 오픈세미나
+                                개최</a><span>2024.06.05</span></li>
+                        <li><a href="#">여행 지원금 혜택 - 광주 여행 특별하게 떠나보자</a><span>2024.06.04</span></li>
+                        <li><a href="#">숙박과 놀이공원 할인쿠폰 받자!</a><span>2024.06.03</span></li>
+                        <li><a href="#">조선시대 의궤를 실감 콘텐츠로 만나다.</a><span>2024.06.02</span></li>
+                        <li><a href="#">경북궁 장고에서 만나는 특별한 궁중의 장</a><span>2024.06.01</span></li>
                     </ul>
-                </div>
-                <div class="gallery">
-                    <h3>서울 구석 갤러리</h3>
+                    <a href="#" class="more">더보기+</a>
+                </section>
+                <!-- //notice -->
+
+                <section class="gallery">
+                    <h3>갤러리</h3>
                     <ul>
                         <li>
                             <a href="#">
-                                <img src="images/gallery1.jpg" alt="서울 청계천">
-                                <span>서울 청계천</span>
+                                <img src="images/gallery1.jpg" alt="가볼만한 곳">
+                                <span>동대문</span>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="images/gallery2.jpg" alt="서울 벛꽃 축제">
-                                <span>서울 벛꽃 축제</span>
+                                <img src="images/gallery2.jpg" alt="가볼만한 곳">
+                                <span>제주도</span>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="images/gallery3.jpg" alt="서울 명소">
-                                <span>서울 명소</span>
+                                <img src="images/gallery3.jpg" alt="가볼만한 곳">
+                                <span>경동시장</span>
                             </a>
                         </li>
                     </ul>
-                </div>
-            </section>
+                </section>
+                <!-- //gallery -->
         </main>
         <!-- //main -->
 
         <footer id="footer">
-            <div class="title">
-                <a href="#">logo</a>
+            <div class="footer1">
+                <h4>서울구석구석</h4>
             </div>
-            <div class="copy">
-                <a href="#">"Every little thing gonna be alright
-                    Rise up this mornin', smile with the risin' sun"</a>
+            <div class="footer2">
+                26464 강원도 원주시 세계로 10 TEL : 003-738-3000 <br>
+                궁금한 정보는 to@korea.com으로 문의주세요.
             </div>
-            <div class="family">
-                <a href="#">family site</a>
+            <div class="footer3">
                 <select>
-                    <option value="1">서울 명소</option>
-                    <option value="2">서울 축제EVENT</option>
-                    <option value="3">서울 실시간교통상황</option>
+                    <option>관련 사이트</option>
+                    <option value="1">국가 여행 사이트</option>
+                    <option value="2">제주도 여행 사이트</option>
+                    <option value="3">경주 여행 사이트</option>
                 </select>
             </div>
         </footer>
         <!-- //footer -->
 
-        <div class="modal">
-            <h4>서울 경마장 공사중</h4>
+        <div class="popup_view">
+            <h3>서울구석구석 공지사항</h3>
             <p>
-                안녕하세요. 경마장 운영팀입니다. 경마장 티켓 예매 일정에 변경 사항이 있어 안내드립니다. 기존 예매 일정에 따르면 6월 1일부터 6월 30일까지 티켓 예매가 가능하였으나 공사 일정으로
-                인해 변경될 예정입니다. 자세한 일정은 추후에 다시 공지하도록 하겠습니다.
+                안녕하세요! 서울구석구석 운영팀입니다. 여러분들에게 소식을 전해드릴 공지사항을 안내해드립니다.
+                서울구석구석에서는 다양한 이벤트를 진행하고 있습니다.
+                현재는 서울의 명소 중 하나를 방문하여 사진을 찍고,
+                SNS에 게시하는 이벤트가 진행 중입니다.
+                참여하신 분들 중 추첨을 통해 푸짐한 상품을 드립니다
             </p>
-            <a href="#" class="popup-close">닫기</a>
+            <a href="#" class="popup_close">닫기</a>
         </div>
+        <!-- //popup -->
     </div>
-    <!-- //wrap -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script>
-        $(function () {
-            //모달
-            $(".notice ul li:nth-child(1)").click(function () {
-                $(".modal").show();
-            });
-            $(".modal a").click(function () {
-                $(".modal").hide();
-            });
-
-            //메뉴
-            $(".nav>ul>li").mouseover(function () {
-                $(this).find(">ul").stop().slideDown();
-            });
-
-            $(".nav>ul>li").mouseout(function () {
-                $(this).find(">ul").stop().slideUp();
-            });
-
-            //슬라이드
-            //     let currentIndex = 0;
-            //     $(".slider-wrap").append($(".slider").first().clone(true));
-
-            //     setInterval(() => {
-            //         currentIndex++;
-
-            //         $(".slider-wrap").animate({ marginLeft: -100 * currentIndex + "%" }, 600);
-
-            //         if (currentIndex == 3) {
-            //             setTimeout(() => {
-            //                 $(".slider-wrap").animate({ marginLeft: 0 }, 0);
-            //                 currentIndex = 0;
-            //             }, 700);
-            //         }
-            //     }, 3000)
-            // 
-
-            // 아래에서 위로 슬라이드 형태
-            let currentIndex = 0;
-            $(".slider-wrap").append($(".slider").first().clone(true));
-
-            setInterval(() => {
-                currentIndex++;
-                $(".slider-wrap").animate({ marginTop: -400 * currentIndex + "px" }, 600);
-
-                if (currentIndex == 3) {
-                    setTimeout(() => {
-                        $(".slider-wrap").animate({ marginTop: 0 }, 0);
-                        currentIndex = 0;
-                    }, 700);
-                }
-            }, 3000);
-        });
-
-    </script>
+    </div>
 </body>
 
 </html>
