--- a/webd/2slide/S2-jquery.html
+++ b/webd/2slide/S2-jquery.html
@@ -184,6 +184,13 @@
       }, 3000);
     });
   </script>
+
+  <script>
+    $(function () {
+      let currentIndex = 0;
+      $(".sliderWrap")
+    });
+  </script>
 </body>
 
 </html>
