--- a/webd/site/siteE/index.html
+++ b/webd/site/siteE/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>철길 마을</title>
+    <title>철길마을</title>
 
     <!-- css -->
     <link rel="stylesheet" href="css/style.css">
@@ -13,155 +13,171 @@
     <script src="script/jquery.min.js"></script>
     <script src="script/script.js"></script>
 </head>
-<div id="wrap">
-    <main id="main">
-        <header id="header">
-            <h1 class="logo">
-                <a href="#">철길 마을</a>
-            </h1>
-            <nav class="nav">
-                <ul>
-                    <li><a href="#">철길마을</a>
-                        <ul>
-                            <li><a href="#">마을 소개</a></li>
-                            <li><a href="#">마을의 유래</a></li>
-                            <li><a href="#">볼거리</a></li>
-                            <li><a href="#">찾아오시는 길</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#">주변맛집</a>
-                        <ul>
-                            <li><a href="#">철길마을</a></li>
-                            <li><a href="#">주변맛집</a></li>
-                            <li><a href="#">주변여행지</a></li>
-                            <li><a href="#">도움마당</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#">주변여행지</a>
-                        <ul>
-                            <li><a href="#">은파호수공원</a></li>
-                            <li><a href="#">초원사진관</a></li>
-                            <li><a href="#">월명공원</a></li>
-                            <li><a href="#">진포해양공원</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#">도움마당</a>
-                        <ul>
-                            <li><a href="#">교통정보</a></li>
-                            <li><a href="#">주변 주차장</a></li>
-                            <li><a href="#">자료실</a></li>
-                            <li><a href="#">자료마당</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </nav>
-        </header>
-        <!-- //header -->
-
-        <section id="contents">
-            <article class="banner">
-                <h3>기차 여행</h3>
-                <a href="#">예매하기</a>
-            </article>
-            <!-- //banner -->
-
-            <article class="notice">
-                <h3>철길마을 공지사항</h3>
-                <ul>
-                    <li><a href="#">철길마을 축제일정 변경안내</a><span>2024.05.01</span></li>
-                    <li><a href="#">철길마을 도서관 임시폐쇄안내</a><span>2024.05.04</span></li>
-                    <li><a href="#">철길마을 자원봉사자 모집공고</a><span>2024.05.15</span></li>
-                    <li><a href="#">철길마을 청소 캠페인안내</a><span>2024.05.20</span></li>
-                    <li><a href="#">철길마을 최신 소식</a><span>2024.05.29</span></li>
-                </ul>
-                <a href="#" class="more">더보기+</a>
-            </article>
-            <!-- //notice -->
-
-            <article class="gallery">
-                <h3>철길마을 갤러리</h3>
-                <ul>
-                    <li><a href="#">최고의 뷰</a></li>
-                    <li><a href="#">위험한 뷰</a></li>
-                    <li><a href="#">아름다운 뷰</a></li>
-                </ul>
-                <a href="#" class="more">더보기+</a>
-            </article>
-            <!-- //gallery -->
-
-            <article class="link">
-                <h3>help</h3>
-                <ul>
-                    <li>
-                        <a href="#">
-                            <img src="images/icon01.png" alt="사진">
-                            <span>사진찍기</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <img src="images/icon02.png" alt="사진">
-                            <span>분실물</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <img src="images/icon03.png" alt="사진">
-                            <span>예약하기</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <img src="images/icon04.png" alt="사진">
-                            <span>전화하기</span>
-                        </a>
-                    </li>
-                </ul>
-            </article>
-            <!-- //link -->
-        </section>
-        <!-- //contents -->
-
-        <article id="slider">
-            <div class="sliderWrap">
-                <div class="slider s1">
-                    <div class="text">
-                        <h3>추억을 소환하는 철길마을</h3>
-                        <p>철길마을</p>
-                    </div>
-                </div>
-                <div class="slider s2">
-                    <div class="text">
-                        <h3>추억을 소환하는 철길마을</h3>
-                        <p>철길마을</p>
-                    </div>
-                </div>
-                <div class="slider s3">
-                    <div class="text">
-                        <h3>추억을 소환하는 철길마을</h3>
-                        <p>철길마을</p>
-                    </div>
-                </div>
-            </div>
-        </article>
-        <!-- //slider -->
-    </main>
-    <!-- //main -->
-
-    <footer id="footer">
-        <div class="footer1"></div>
-        <div class="footer2">
-            <div class="footer2-1"></div>
-            <div class="footer2-2"></div>
-        </div>
-        <div class="footer3"></div>
-    </footer>
-    <!-- //footer -->
-</div>
-<!-- //wrap -->
 
 <body>
+    <div id="wrap">
+        <main id="main">
+            <header id="header">
+                <h1 class="logo">
+                    <a href="#">철길마을</a>
+                </h1>
+                <nav class="nav">
+                    <ul>
+                        <li><a href="#">철길마을</a>
+                            <ul class="submenu">
+                                <li><a href="#">마을소개</a></li>
+                                <li><a href="#">마을의유래</a></li>
+                                <li><a href="#">볼거리</a></li>
+                                <li><a href="#">찾아오시는 길</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">주변맛집</a>
+                            <ul class="submenu">
+                                <li><a href="#">빵집</a></li>
+                                <li><a href="#">간장게장</a></li>
+                                <li><a href="#">중국음식점</a></li>
+                                <li><a href="#">횟집</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">주변여행지</a>
+                            <ul class="submenu">
+                                <li><a href="#">은파호수공원</a></li>
+                                <li><a href="#">초원사진관</a></li>
+                                <li><a href="#">월명공원</a></li>
+                                <li><a href="#">진포해양공원</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">도움마당</a>
+                            <ul class="submenu">
+                                <li><a href="#">교통정보</a></li>
+                                <li><a href="#">주변주차장</a></li>
+                                <li><a href="#">자료실</a></li>
+                                <li><a href="#">자료마당</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </nav>
+            </header>
+            <!-- //header -->
 
+            <section id="contents">
+                <article class="banner">
+                    <h3>기차여행</h3>
+                    <a href="#">예매하기</a>
+                </article>
+                <!-- //banner -->
+
+                <article class="notice">
+                    <h3>철길마을 공지사항</h3>
+                    <ul>
+                        <li><a href="#">철길마을 축제일정변경안내</a><span>2024.02.04</span></li>
+                        <li><a href="#">철길마을 도서관 임시폐쇄안내</a><span>2024.04.01</span></li>
+                        <li><a href="#">철길마을 자원봉사자 모집공고</a><span>2024.04.20</span></li>
+                        <li><a href="#">철길마을 청소캠페인 안내</a><span>2024.08.16</span></li>
+                        <li><a href="#">철길마을 최신 소식</a><span>2024.10.24</span></li>
+                    </ul>
+                    <a href="#" class="more">더보기+</a>
+                </article>
+                <!-- //notice -->
+
+                <article class="gallery">
+                    <h3>철길마을 갤러리</h3>
+                    <ul>
+                        <li><a href="#">최고의 뷰</a></li>
+                        <li><a href="#">위험한 뷰</a></li>
+                        <li><a href="#">아름다운 뷰</a></li>
+                    </ul>
+                    <a href="#" class="more">더보기+</a>
+                </article>
+                <!-- //gallery -->
+
+                <article class="link">
+                    <h3>링크</h3>
+                    <ul>
+                        <li>
+                            <a href="#">
+                                <img src="images/icon01.png" alt="사진찍기">
+                                <span>사진찍기</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="images/icon02.png" alt="분실물">
+                                <span>분실물</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="images/icon03.png" alt="예약하기">
+                                <span>예약하기</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="images/icon04.png" alt="전화하기">
+                                <span>전화하기</span>
+                            </a>
+                        </li>
+                    </ul>
+                </article>
+                <!-- //link -->
+            </section>
+            <!-- //contents -->
+
+            <article id="slider">
+                <div class="sliderWrap">
+                    <div class="slider s1">
+                        <div class="text">
+                            <h3>추억을 소환하는 철길마을</h3>
+                            <p>철길 마을</p>
+                        </div>
+                    </div>
+                    <div class="slider s2">
+                        <div class="text">
+                            <h3>추억을 소환하는 철길마을</h3>
+                            <p>철길 마을</p>
+                        </div>
+                    </div>
+                    <div class="slider s3">
+                        <div class="text">
+                            <h3>추억을 소환하는 철길마을</h3>
+                            <p>철길 마을</p>
+                        </div>
+                    </div>
+                </div>
+            </article>
+            <!-- //slider -->
+        </main>
+        <!-- //main -->
+
+        <footer id="footer">
+            <div class="footer1">
+                <h4>철길마을</h4>
+            </div>
+            <div class="footer2">
+                <div class="footer2-1">
+                    <ul>
+                        <li><a href="#">개인정보처리방침</a></li>
+                        <li><a href="#">정보공개</a></li>
+                        <li><a href="#">홈페이지 운영지침</a></li>
+                        <li><a href="#">분실물 확인하기</a></li>
+                    </ul>
+                </div>
+                <div class="footer2-2">
+                    15073 전라북도 군산시 군산로 237 (정왕동) 철길 마을 COPYRIGHT(C) ALL RIGHTS RESERVED.
+                </div>
+            </div>
+            <div class="footer3">
+                <select name="family" id="family">
+                    <option value="철길마을1">철길마을1</option>
+                    <option value="철길마을2">철길마을2</option>
+                    <option value="철길마을3">철길마을3</option>
+                </select>
+            </div>
+        </footer>
+        <!-- //footer -->
+    </div>
+    <!-- //wrap -->
 </body>
 
 </html>
