--- a/webd/site/siteE/index.html
+++ b/webd/site/siteE/index.html
@@ -60,7 +60,7 @@
             </header>
             <!-- //header -->
 
-            <section id="contents">
+            <div id="contents">
                 <article class="banner">
                     <h3>기차여행</h3>
                     <a href="#">예매하기</a>
@@ -121,7 +121,7 @@
                     </ul>
                 </article>
                 <!-- //link -->
-            </section>
+            </div>
             <!-- //contents -->
 
             <article id="slider">
@@ -176,6 +176,17 @@
             </div>
         </footer>
         <!-- //footer -->
+
+        <div class="popup-view">
+            <h3>철길마을 공지사항</h3>
+            <p>
+                안녕하세요, 철길마을 주민 여러분!
+                철길마을 축제 개최 안내드립니다
+                참고 하시고 많은 참여 바랍니다.
+                감사합니다.
+            </p>
+            <a href="#" class="popup-close">닫기</a>
+        </div>
     </div>
     <!-- //wrap -->
 </body>
