--- a/webd/site/siteE/index.html
+++ b/webd/site/siteE/index.html
@@ -113,7 +113,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="#" class="popup-btn">
                                 <img src="images/icon04.png" alt="전화하기">
                                 <span>전화하기</span>
                             </a>
