--- a/webd/site/siteD/index.html
+++ b/webd/site/siteD/index.html
@@ -8,14 +8,15 @@
 
     <!-- css -->
     <link rel="stylesheet" href="css/style.css">
-    <!-- script  -->
+
+    <!-- script -->
     <script src="script/jquery.min.js"></script>
     <script src="script/script.js"></script>
 </head>
 
 <body>
     <div id="wrap">
-        <aside id="aside">
+        <header id="header">
             <h1 class="logo">
                 <a href="#">서울구석구석</a>
             </h1>
@@ -30,7 +31,7 @@
                     </li>
                     <li><a href="#">추천</a>
                         <ul class="submenu">
-                            <li><a href="#">에디터추천</a></li>
+                            <li><a href="#">에디터 추천</a></li>
                             <li><a href="#">테마코스</a></li>
                             <li><a href="#">도보해설관광</a></li>
                             <li><a href="#">한류관광</a></li>
@@ -53,32 +54,32 @@
                     </li>
                 </ul>
             </nav>
-        </aside>
-        <!-- //aside -->
+        </header>
+        <!-- //header -->
 
         <main id="main">
             <div id="slider">
-                <article class="imageWrap">
-                    <div class="image i1">
+                <article class="sliderWrap">
+                    <div class="slider s1">
                         <div class="text">
                             <h2>할인 가득! 설렘 가득</h2>
-                            <p>대한민국 숙박세일 페스타 5월 30일(화), 놀이공원 할인대전 5월 31일(수)부터 실시</p>
+                            <p>대한민국 숙박세일 페스타’5월 30일(화),‘놀이공원 할인대전’5월 31일(수)부터 실시</p>
                         </div>
                     </div>
-                    <div class="image i2">
+                    <div class="slider s2">
                         <div class="text">
                             <h2>할인 가득! 설렘 가득</h2>
-                            <p>대한민국 숙박세일 페스타 5월 30일(화), 놀이공원 할인대전 5월 31일(수)부터 실시</p>
+                            <p>대한민국 숙박세일 페스타’5월 30일(화),‘놀이공원 할인대전’5월 31일(수)부터 실시</p>
                         </div>
                     </div>
-                    <div class="image i3">
+                    <div class="slider s3">
                         <div class="text">
                             <h2>할인 가득! 설렘 가득</h2>
-                            <p>대한민국 숙박세일 페스타 5월 30일(화), 놀이공원 할인대전 5월 31일(수)부터 실시</p>
+                            <p>대한민국 숙박세일 페스타’5월 30일(화),‘놀이공원 할인대전’5월 31일(수)부터 실시</p>
                         </div>
                     </div>
                 </article>
-                <!-- imageWrap -->
+                <!-- //sliderWrap -->
 
                 <article class="banner">
                     <h3>6월은 <em>여행가는 달</em></h3>
@@ -86,17 +87,16 @@
                 </article>
                 <!-- //banner -->
             </div>
-            <!-- //slider -->
+
             <div id="contents">
                 <section class="notice">
                     <h3>공지사항</h3>
                     <ul>
-                        <li class="popup-btn"><a href="#">2024 관광산업 디지털혁신 오픈세미나 개최 관광산업 디지털혁신 오픈세미나
-                                개최</a><span>2024.06.05</span></li>
-                        <li><a href="#">여행 지원금 혜택 - 광주 여행 특별하게 떠나보자</a><span>2024.06.04</span></li>
-                        <li><a href="#">숙박과 놀이공원 할인쿠폰 받자!</a><span>2024.06.03</span></li>
-                        <li><a href="#">조선시대 의궤를 실감 콘텐츠로 만나다.</a><span>2024.06.02</span></li>
-                        <li><a href="#">경북궁 장고에서 만나는 특별한 궁중의 장</a><span>2024.06.01</span></li>
+                        <li class="popup-btn"><a href="#">2023 관광산업 디지털혁신 오픈세미나 개최</a><span>2024.04.01</span></li>
+                        <li><a href="#">여행 지원금 혜택 - 광주 여행 특별하게 떠나보자</a><span>2024.04.20</span></li>
+                        <li><a href="#">숙박과 놀이공원 할인쿠폰 받자!</a><span>2024.08.16</span></li>
+                        <li><a href="#">조선시대 의궤를 실감 콘텐츠로 만나다.</a><span>2024.10.16</span></li>
+                        <li><a href="#">경북궁 장고에서 만나는 특별한 궁중의 장</a><span>2024.10.24<span></li>
                     </ul>
                     <a href="#" class="more">더보기+</a>
                 </section>
@@ -107,25 +107,26 @@
                     <ul>
                         <li>
                             <a href="#">
-                                <img src="images/gallery1.jpg" alt="가볼만한 곳">
-                                <span>동대문</span>
+                                <img src="images/gallery1.jpg" alt="청계천">
+                                <span>청계천</span>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="images/gallery2.jpg" alt="가볼만한 곳">
-                                <span>제주도</span>
+                                <img src="images/gallery2.jpg" alt="벚꽃뷰">
+                                <span>벚꽃뷰</span>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="images/gallery3.jpg" alt="가볼만한 곳">
-                                <span>경동시장</span>
+                                <img src="images/gallery3.jpg" alt="호수뷰">
+                                <span>호수뷰</span>
                             </a>
                         </li>
                     </ul>
                 </section>
                 <!-- //gallery -->
+            </div>
         </main>
         <!-- //main -->
 
@@ -148,7 +149,7 @@
         </footer>
         <!-- //footer -->
 
-        <div class="popup_view">
+        <div class="popup-view">
             <h3>서울구석구석 공지사항</h3>
             <p>
                 안녕하세요! 서울구석구석 운영팀입니다. 여러분들에게 소식을 전해드릴 공지사항을 안내해드립니다.
@@ -157,11 +158,11 @@
                 SNS에 게시하는 이벤트가 진행 중입니다.
                 참여하신 분들 중 추첨을 통해 푸짐한 상품을 드립니다
             </p>
-            <a href="#" class="popup_close">닫기</a>
+            <a href="#" class="popup-close">닫기</a>
         </div>
         <!-- //popup -->
     </div>
-    </div>
+    <!-- //wrap -->
 </body>
 
 </html>
