--- a/webd/site/siteD/index.html
+++ b/webd/site/siteD/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>서울구석구석</title>
 
@@ -16,7 +17,7 @@
 
 <body>
     <div id="wrap">
-        <header id="header">
+        <aside id="aside">
             <h1 class="logo">
                 <a href="#">서울구석구석</a>
             </h1>
@@ -31,7 +32,7 @@
                     </li>
                     <li><a href="#">추천</a>
                         <ul class="submenu">
-                            <li><a href="#">에디터 추천</a></li>
+                            <li><a href="#">에디터 추턴</a></li>
                             <li><a href="#">테마코스</a></li>
                             <li><a href="#">도보해설관광</a></li>
                             <li><a href="#">한류관광</a></li>
@@ -54,35 +55,35 @@
                     </li>
                 </ul>
             </nav>
-        </header>
-        <!-- //header -->
+        </aside>
+        <!-- //aside -->
 
         <main id="main">
             <div id="slider">
-                <article class="sliderWrap">
-                    <div class="slider s1">
+                <article class="imageWrap">
+                    <div class="image i1">
                         <div class="text">
                             <h2>할인 가득! 설렘 가득</h2>
                             <p>대한민국 숙박세일 페스타’5월 30일(화),‘놀이공원 할인대전’5월 31일(수)부터 실시</p>
                         </div>
                     </div>
-                    <div class="slider s2">
+                    <div class="image i2">
                         <div class="text">
                             <h2>할인 가득! 설렘 가득</h2>
                             <p>대한민국 숙박세일 페스타’5월 30일(화),‘놀이공원 할인대전’5월 31일(수)부터 실시</p>
                         </div>
                     </div>
-                    <div class="slider s3">
+                    <div class="image i3">
                         <div class="text">
                             <h2>할인 가득! 설렘 가득</h2>
                             <p>대한민국 숙박세일 페스타’5월 30일(화),‘놀이공원 할인대전’5월 31일(수)부터 실시</p>
                         </div>
                     </div>
                 </article>
-                <!-- //sliderWrap -->
+                <!-- //imageWrap -->
 
                 <article class="banner">
-                    <h3>6월은 <em>여행가는 달</em></h3>
+                    <h3>6월은 <strong>여행가는 달</strong></h3>
                     <a href="#">알아보기</a>
                 </article>
                 <!-- //banner -->
@@ -92,11 +93,12 @@
                 <section class="notice">
                     <h3>공지사항</h3>
                     <ul>
-                        <li class="popup-btn"><a href="#">2023 관광산업 디지털혁신 오픈세미나 개최</a><span>2024.04.01</span></li>
-                        <li><a href="#">여행 지원금 혜택 - 광주 여행 특별하게 떠나보자</a><span>2024.04.20</span></li>
-                        <li><a href="#">숙박과 놀이공원 할인쿠폰 받자!</a><span>2024.08.16</span></li>
-                        <li><a href="#">조선시대 의궤를 실감 콘텐츠로 만나다.</a><span>2024.10.16</span></li>
-                        <li><a href="#">경북궁 장고에서 만나는 특별한 궁중의 장</a><span>2024.10.24<span></li>
+                        <li class="popup-btn"><a href="#">2023 관광산업 디지털혁신 오픈세미나 개최 관광산업 디지털혁신 오픈세미나
+                                개최</a><span>2023.06.05</span></li>
+                        <li><a href="#">여행 지원금 혜택 - 광주 여행 특별하게 떠나보자</a><span>2023.06.04</span></li>
+                        <li><a href="#">숙박과 놀이공원 할인쿠폰 받자!</a><span>2023.06.03</span></li>
+                        <li><a href="#">조선시대 의궤를 실감 콘텐츠로 만나다.</a><span>2023.06.02</span></li>
+                        <li><a href="#">경북궁 장고에서 만나는 특별한 궁중의 장</a><span>2023.06.01</span></li>
                     </ul>
                     <a href="#" class="more">더보기+</a>
                 </section>
@@ -107,19 +109,19 @@
                     <ul>
                         <li>
                             <a href="#">
-                                <img src="images/gallery1.jpg" alt="청계천">
+                                <img src="images/gallery1.jpg" alt="가볼만한 곳">
                                 <span>청계천</span>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="images/gallery2.jpg" alt="벚꽃뷰">
+                                <img src="images/gallery2.jpg" alt="가볼만한 곳">
                                 <span>벚꽃뷰</span>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="images/gallery3.jpg" alt="호수뷰">
+                                <img src="images/gallery3.jpg" alt="가볼만한 곳">
                                 <span>호수뷰</span>
                             </a>
                         </li>
