--- a/webd/slider-5.html
+++ b/webd/slider-5.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>웹디자인기능사 슬라이드 S-5</title>
+  <title>슬라이드 좌우반응형 S-5</title>
   <link href="https://webfontworld.github.io/gmarket/GmarketSans.css" rel="stylesheet">
   <style>
     * {
@@ -74,7 +74,7 @@
     #slider {
       width: calc(100% - 600px);
       height: 100%;
-      background-color: #a3a3a3;
+      overflow: hidden;
     }
 
     #footer {
@@ -105,20 +105,25 @@
     }
 
     /* slider */
-    #slider {}
-
     .sliderWrap {
-      position: relative;
-      width: 300%;
+      width: 400%;
+      /* 가로로 슬라이드 처리, 이미지가 3장이니까 300% */
       height: 100%;
+      display: flex;
     }
 
     .sliderWrap .slider {
       width: 100%;
       height: 100%;
+      /*  width: 100%;
+      height: 100%; 
+      (상위박스인 sliderWrap에도 위드값,하이트값 설정)
+      설정을 해야 이미지가 화면에 나타남 */
+      position: relative;
+      /* span 앱솔루트 속성 기준점으로 설정 */
+      background-repeat: no-repeat;
       background-size: cover;
       background-position: center;
-      background-repeat: no-repeat;
     }
 
     .sliderWrap .slider.s1 {
@@ -138,9 +143,8 @@
       left: 50%;
       top: 50%;
       transform: translate(-50%, -50%);
-      background-color: rgba(0, 0, 0, 0.3);
+      background-color: rgba(255, 255, 255, 0.4);
       padding: 10px 20px;
-      color: #fff;
     }
   </style>
 </head>
@@ -189,10 +193,50 @@
   </div>
   <!-- //wrap -->
 
-  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-   
-    <script>
-       
-    </script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script>
+    $(function () {
+      let currentIndex = 0;  // 현재 이미지 초기값 설정
+      $(".sliderWrap").append($(".slider").first().clone(true));  // 첫번째 이미지 복제
+
+      setInterval(() => {  // 3초마다 실행시켜라
+        currentIndex++;  // 뭐를? 이미지 1씩증가를!!
+        // console.log(currentIndex)
+        $(".sliderWrap").animate({ marginLeft: -100 * currentIndex + "%" }, 600);  // 전체이미지 애니메이션 효과 설정
+
+        if (currentIndex == 3) {  // 만약, 마지막 이미지에 도달했을 때
+          setTimeout(() => {  // 한 번만 실행(setTimeout으로 설정한 함수는 지연 시간이 지난 후 한 번만 실행)
+            $(".sliderWrap").animate({ marginLeft: 0 }, 0);  // 애니메이션 정지
+            currentIndex = 0;  // 현재이미지 초기화
+          }, 600);
+        }
+      }, 3000)
+    });
+  </script>
+
+  <script>
+    // window.onload = function () {
+    //   let currentIndex = 0;   //현재 이미지
+    //   const sliderWrap = document.querySelector(".sliderWrap");   //전체 이미지 설정
+    //   const slider = document.querySelectorAll(".slider");    //각각의 이미지
+    //   const sliderClone = sliderWrap.firstElementChild.cloneNode(true);   //첫번째 이미지를 저장
+    //   sliderWrap.appendChild(sliderClone);    //이미지 마지막 영역에 추가
+
+    //   setInterval(() => {     //3초에 한번씩 실행
+    //     currentIndex++;     //현재 이미지를 1씩 추가
+    //     sliderWrap.style.transition = "all 0.6s";   //애니메이션 효과 추가
+    //     sliderWrap.style.marginLeft = -currentIndex * 100 + "%"; //왼쪽으로 100%씩 이동
+
+    //     if (currentIndex == slider.length) {
+    //       setTimeout(() => {
+    //         sliderWrap.style.transition = "0s";     //애니메이션 효과 정지
+    //         sliderWrap.style.marginLeft = "0";    //이미지 위치를 초기화
+    //         currentIndex = 0;   //현재 이미지를 초기화
+    //       }, 700);
+    //     }
+    //   }, 3000);
+    // };
+  </script>
 </body>
+
 </html>
