--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div id="myComputerIcon" class="draggableIcon icon">
       <a href="#">
         <img src="assets/img/face.png" alt="내 컴퓨터">
-        <span>anjieun</span>
+        <span>Webweaver</span>
       </a>
     </div>
     <div class="draggableIcon icon">
@@ -90,13 +90,13 @@
     </div>
     <div class="draggableIcon icon">
       <a href="https://webweaver420.github.io/" target="_blank">
-        <img src="assets/img/icon-blog.png" alt="BLOG">
+        <img src="assets/img/icon2.png" alt="BLOG">
         <span>BLOG</span>
       </a>
     </div>
     <div class="draggableIcon icon">
       <a href="effect/index.html" target="_blank">
-        <img src="assets/img/icon-effect.png" alt="EFFECT">
+        <img src="assets/img/icon1.png" alt="EFFECT">
         <span>EFFECT</span>
       </a>
     </div>
