--- a/Web/Web-Standards/index.html
+++ b/Web/Web-Standards/index.html
@@ -198,7 +198,7 @@
                         <!-- //col1 -->
                         <div class="column col2">
                             <h3><span class="ico_img ir_pm">아이콘2</span><em class="ico_tit">Notice</em></h3>
-                            <p class="ico_desc">가장 웹 페이지에서 기본이 되는 게시판 유형입니다.</p>
+                            <p class="ico_desc">웹 페이지에서 가장 기본이 되는 게시판 유형입니다.</p>
                             <!-- 게시판 유형3 -->
                             <div class="notice3">
                                 <h4>HTML Reference</h4>
