--- a/effect/index.html
+++ b/effect/index.html
@@ -100,7 +100,7 @@
         renderer.setSize(window.innerWidth, window.innerHeight);
         document.getElementById("canvas").appendChild(renderer.domElement);
 
-        // 오프젝트 설정
+        // 오브젝트 설정
         const circle = new THREE.Object3D();
         const net = new THREE.Object3D();
         const particle = new THREE.Object3D();
